--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 VITE_API_HOST=http://localhost:8012/php/new_db
+VITE_SERVICE_ID=service_zrf1czq
+VITE_TEMPLATE_ID=template_7peiw9y
+VITE_PUBLIC_KEYMAN=koU2KxU5l7iLPZyts
